[gd_scene load_steps=7 format=3 uid="uid://dwjgio222ona8"]

[ext_resource type="Script" path="res://cards/abridged_card.gd" id="1_5dpwq"]
[ext_resource type="Theme" uid="uid://jvq42dohggaa" path="res://assets/Styleboxes/test_stylebox-1.tres" id="2_0jwey"]
[ext_resource type="Texture2D" uid="uid://biv7uwux8kqdd" path="res://assets/Styleboxes/test-stylebox-abridged.png" id="4_i0j1b"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wi50d"]
texture = ExtResource("4_i0j1b")
region_rect = Rect2(0, 0, 150, 142.824)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_61c0u"]
texture = ExtResource("4_i0j1b")
region_rect = Rect2(0, 0, 150, 142.824)
modulate_color = Color(0.643137, 0.643137, 0.643137, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bpv47"]
texture = ExtResource("4_i0j1b")
region_rect = Rect2(-0.0718384, -0.465431, 149.952, 143.273)
modulate_color = Color(0.847059, 0.847059, 0.847059, 1)

[node name="AbridgedCard" type="Control"]
z_index = 1
custom_minimum_size = Vector2(150, 143)
layout_mode = 3
anchor_right = 0.078
anchor_bottom = 0.132
offset_right = 0.23999
offset_bottom = 0.440002
script = ExtResource("1_5dpwq")

[node name="CardSelect" type="Button" parent="."]
z_index = 2
custom_minimum_size = Vector2(150, 143)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2_0jwey")
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0.439216, 0.694118, 0.619608, 1)
theme_override_colors/icon_pressed_color = Color(0.823529, 0.823529, 0.823529, 1)
theme_override_colors/icon_hover_color = Color(0.803922, 0.254902, 0.462745, 1)
theme_override_styles/hover = SubResource("StyleBoxTexture_wi50d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_61c0u")
theme_override_styles/normal = SubResource("StyleBoxTexture_bpv47")

[node name="CardName" type="Label" parent="CardSelect"]
layout_mode = 0
offset_left = 19.0
offset_top = 24.0
offset_right = 115.0
offset_bottom = 47.0

[node name="CardArc" type="Label" parent="CardSelect"]
layout_mode = 0
offset_left = 65.0
offset_top = 113.0
offset_right = 105.0
offset_bottom = 136.0

[connection signal="button_up" from="CardSelect" to="." method="_on_card_select_button_up"]
